--- a/CSS PRACTICE/day-04/practise09.html
+++ b/CSS PRACTICE/day-04/practise09.html
@@ -16,9 +16,6 @@
         nav ul li{
             display: inline;
             margin-right: 1rem;
-            text-align: center;
-            border-radius: 15px;
-
         }
 
         nav ul a{
@@ -27,7 +24,14 @@
             background-color: brown;
             color: white;
             padding: 1rem;
+            width: 120px;margin-bottom: 5px;
             display: inline-block;
+            border-radius: 10px;
+        }
+
+        nav ul a:hover{
+            background-color: blue;
+            color: yellow;
         }
     </style>
 </head>
